--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-cli": "^6.2.0",
     "babel-core": "^6.2.1",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-2": "^6.1.18",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "mocha": "^2.3.4"
@@ -20,7 +21,8 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "stage-2"
     ]
   },
   "repository": {
