--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "immutable": "^3.7.5",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "socket.io": "^1.3.7"
   },
   "devDependencies": {
     "babel-cli": "^6.2.0",
@@ -17,6 +18,7 @@
     "mocha": "^2.3.4"
   },
   "scripts": {
+    "start": "babel-node index.js",
     "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
     "test:watch": "npm run test -- --watch"
   },
